--- a/package.json
+++ b/package.json
@@ -7,24 +7,32 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prisma:generate": "prisma db generate",
     "prisma:push": "prisma db push",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "6.6.0",
     "@radix-ui/react-checkbox": "1.1.5",
     "@radix-ui/react-dialog": "1.1.7",
     "@radix-ui/react-popover": "1.1.7",
     "@radix-ui/react-slot": "1.1.2",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.487.0",
     "next": "15.2.4",
-    "prisma": "^6.6.0",
+    "prisma": "6.6.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-use": "^17.6.0",
+    "react-use": "17.6.0",
     "tailwind-merge": "3.2.0",
+    "ts-node": "10.9.2",
     "tw-animate-css": "1.2.5",
     "vaul": "1.1.2",
     "zustand": "5.0.3"
