--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "dependencies": {
     "@prisma/client": "6.6.0",
     "@radix-ui/react-checkbox": "1.1.5",
-    "@radix-ui/react-dialog": "1.1.7",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-popover": "1.1.7",
     "@radix-ui/react-slot": "1.1.2",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
