--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-popover": "1.1.7",
     "@radix-ui/react-slot": "1.1.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/qs": "^6.9.18",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "0.7.1",
@@ -29,6 +30,7 @@
     "lucide-react": "0.487.0",
     "next": "15.2.4",
     "prisma": "6.6.0",
+    "qs": "6.14.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-use": "17.6.0",
